force-app/main/default/objects/Avoir__c/Avoir__c.object-meta.xml
<CustomObject>
    <description>Objet représentant les avoirs relatif a la pharmacie.</description>
    <label>Avoir</label>
    <nameField>
        <displayFormat>Avoir-{0000}</displayFormat>
        <label>Avoir Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Avoirs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>