force-app/main/default/objects/Avoir__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Champs pour faire une description de l&apos;avoir</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>