force-app/main/default/objects/Avoir__c/fields/Montant__c.field-meta.xml
<CustomField>
    <fullName>Montant__c</fullName>
    <description>Champs représentant le montant de l&apos;avoir</description>
    <label>Montant</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>