force-app/main/default/objects/Avoir__c/fields/Statut__c.field-meta.xml
<CustomField>
    <fullName>Statut__c</fullName>
    <description>Champs représente le Status de l&apos;avoir</description>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>En Cours</fullName>
            </value>
            <value>
                <fullName>Régulariser</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>