force-app/main/default/objects/Avoir__c/listViews/Avoir.listView-meta.xml
<ListView>
    <fullName>Avoir</fullName>
    <columns>NAME</columns>
    <columns>Montant__c</columns>
    <columns>Statut__c</columns>
    <filterScope>Mine</filterScope>
    <label>Avoir</label>
</ListView>