force-app/main/default/objects/Avoir__c/listViews/Avoir_Statu.listView-meta.xml
<ListView>
    <fullName>Avoir_Statu</fullName>
    <columns>NAME</columns>
    <columns>Montant__c</columns>
    <columns>Statut__c</columns>
    <filterScope>Everything</filterScope>
    <label>Avoir Statu</label>
</ListView>