force-app/main/default/objects/Avoir__c/listViews/Vue_recemment.listView-meta.xml
<ListView>
    <fullName>Vue_recemment</fullName>
    <columns>NAME</columns>
    <columns>Montant__c</columns>
    <columns>Statut__c</columns>
    <filterScope>Everything</filterScope>
    <label>Vue récemment</label>
</ListView>